index.css
.profile-img-container {
  width: 150px;
  height: 150px;
  border-radius: 12px;
  padding: 2px;
  border: 1px solid #dee2e6;
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}
#cv-btn {
  border: 1px solid #8f8e8e;
}
.github-btn:hover,
.download-cv:hover {
  transform: translateY(-5px);
  transition: all 0.3s ease;
  box-shadow: 0 5px 20px 1px rgb(209, 208, 208);
}

.socials {
  width: 40px;
  height: 40px;
  border-radius: 8px;
  padding: 2px;
  border: 1px solid #dee2e6;
}

.dark-mode .github-btn:hover,
.dark-mode .download-cv:hover {
  box-shadow: 0 5px 20px 1px rgba(255, 255, 255, 0.15);
}
.projects-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

@media (min-width: 375px) {
  header {
    display: flex;
    flex-direction: column;
    position: relative;
  }
  .theme {
    position: absolute;
    top: 0;
    right: 0;
  }
  .header-btn {
    width: 100%;
    padding: 5px;
  }
  .container-header {
    text-align: center;
  }
}
@media (min-width: 768px) {
  .projects-grid {
    grid-template-columns: repeat(1, 1fr);
  }
  header {
    flex-direction: row;
  }
  .container-header {
    display: flex;
    text-align: left;
  }
  .header-btn {
    width: auto;
  }
}
@media (min-width: 1200px) {
  .projects-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}
.dark-mode #cv-btn {
  color: black !important;
  border-color: #555;
}

.dark-mode #cv-btn:hover {
  color: #000 !important;
  background-color: #fff;
}

.verified-icon {
  width: 30px;
  height: 30px;
}
.icons {
  width: 20px;
  height: 20px;
}

.container-header {
  width: 100%;
  display: flex;
  flex-direction: column;
}
.theme {
  height: 40px;
  width: 40px;
  border: 1px solid #dee2e6;
}
.cards:hover {
  transform: translateY(-5px);
  box-shadow: 0 15px 25px 1px rgb(242, 241, 241);
}
.cards {
  border: 1px solid #dee2e6;
}
.dark-mode .cards {
  border: 1px solid #414144ff;
}
.dark-mode .cards:hover {
  box-shadow: 0 15px 25px 1px rgb(28, 28, 28);
}
body {
  transition: all 0.3s ease;
  display: flex;
}
.dark-mode {
  background-color: #131316;
  color: #cccccc;
  border-color: #a8a6a6;
}
.profile-img-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 9px;
}
.tech-stack {
  padding: 2px 8px;
  border: 1px solid #dee2e6;
  font-size: 14px;
  border-radius: 6px;
}
.dark-mode .tech-stack {
  border-color: #414144ff;
}
.section {
  animation: fadeIn 0.5s ease-in-out;
}
@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

